# smb-mounter

./: config.ini  idea.md  pyproject.toml  smb-mounter.py
