[tool.poetry]
name = "python-fuse"
version = "0.1.0"
description = ""
authors = ["Rik <gitaarik@posteo.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fusepy = "^3.0.1"
pysmb = "^1.2.9.1"
pygobject = "^3.48.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
