[tool.poetry]
name = "python-fuse"
version = "0.1.0"
description = ""
authors = ["Rik <gitaarik@posteo.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyfuse3 = "^3.3.0"
smbprotocol = "^1.13.0"
secretstorage = "^3.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
